add makevars files back in

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(simulateNeutralDriftData)
 export(th_PulseChase)
 export(th_contLabelling)
 export(th_contLabelling_slope_and_partials)
+importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 useDynLib(CryptDriftR)
