--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,6 @@ Imports: Rcpp (>= 0.12.11),
     dplyr
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.0.1
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
